# openapi.json
@@ -205,7 +205,13 @@
                     "new_after_n_chars": {
                         "type": "integer",
                         "title": "New after n chars",
-                        "description": "If chunking strategy is set, cut off new sections after reaching a length of n chars. Default: 1500",
+                        "description": "If chunking strategy is set, cut off new sections after reaching a length of n chars (soft max). Default: 1500",
+                        "example": 1500
+                    },
+                    "max_characters": {
+                        "type": "integer",
+                        "title": "Max Characters",
+                        "description": "If chunking strategy is set, cut off new sections after reaching a length of n chars (hard max). Default: 1500",
                         "example": 1500
                     }
                 },
